plugins {
    id 'org.springframework.boot' version '2.7.15'
    id 'io.spring.dependency-management' version '1.1.3'
    id 'java'
}

test {
    useJUnitPlatform()
}

allprojects {
    group = 'camp.nextstep.edu'
    sourceCompatibility = "16"
    version '0.0.1-SNAPSHOT'
    repositories {
        mavenCentral()
    }
    targetCompatibility = JavaVersion.VERSION_16
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    tasks.named('test') {
        useJUnitPlatform()
    }
    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter-actuator'
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'org.springframework.boot:spring-boot-starter-web'
        implementation 'org.flywaydb:flyway-core'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        testImplementation 'io.rest-assured:rest-assured:3.3.0'
        runtimeOnly 'com.h2database:h2'
    }
}
